DP-6562: Add margin to the body when a max-width is set to prevent strange spacing when the header is fixed

--- a/modules/atlas/styles/legacy/_dashboard.scss
+++ b/modules/atlas/styles/legacy/_dashboard.scss
@@ -94,6 +94,10 @@
 
 .c-dashboard--max-width {
   background-color: $secondary-gray10;
+
+  .c-dashboard__body {
+    margin-left: calc(100vw - 100%); // Fixes wrongfully set overflow-y as its not on the root container
+  }
 }
 
 .c-dashboard--full-height {
